--- a/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-ble-services.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-ble-services.mdx
@@ -14,8 +14,8 @@ are provided below.
 
 It is generally recommended that the user first press a button on the Hotspot to
 activate the BLE advertising. Alternatively, enabling BLE for ~5 minutes after
-power up is acceptable. Maintaining BLE advertising for a prolonged period of time
-is not recommended.
+power up is acceptable. Maintaining BLE advertising for a prolonged period of
+time is not recommended.
 
 Hotspot Makers make develop their own BLE service which complies with the
 specification herein. In addition, they may leverage Helium's open-source
