--- a/docs/mine-hnt/full-hotspots/full-hotspots.mdx
+++ b/docs/mine-hnt/full-hotspots/full-hotspots.mdx
@@ -9,9 +9,9 @@ slug: /mine-hnt/full-hotspots
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 Full Hotspots are Helium coverage providers that can participate in all
-potential reward activity available to Hotspots. Compared to a [Data Only
-Hotspots](/mine-hnt/data-only-hotspots), Full Hotspots are eligible for
-[Proof-of-Coverage](/blockchain/proof-of-coverage) Rewards.
+potential reward activity available to Hotspots. Compared to a
+[Data Only Hotspots](/mine-hnt/data-only-hotspots), Full Hotspots are eligible
+for [Proof-of-Coverage](/blockchain/proof-of-coverage) Rewards.
 
 Full Hotspots may only be manufactured by approved **Makers**. These are
 hardware vendors that have been approved by the Helium community and the
@@ -43,8 +43,8 @@ Hotspots before they are granted access to the blockchain.
 | [HeNet BV/LongAP](https://www.longap.com)               | [HeNet BV/LongAP](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/henet.md)    | 2021-03-16    | [12zX4jgDGMbJgRwmCfRNGXBuphkQRqkUTcLzYHTQvd4Qgu8kiL4](https://explorer.helium.com/accounts/12zX4jgDGMbJgRwmCfRNGXBuphkQRqkUTcLzYHTQvd4Qgu8kiL4) |
 | [Smart Mimic](https://smartmimic.com)                   | [Smart Mimic](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/smart-mimic.md)  | 2021-03-25    | [13MS2kZHU4h6wp3tExgoHdDFjBsb9HB9JBvcbK9XmfNyJ7jqzVv](https://explorer.helium.com/accounts/13MS2kZHU4h6wp3tExgoHdDFjBsb9HB9JBvcbK9XmfNyJ7jqzVv) |
 | [Seeed/SenseCap](https://www.sensecapmx.com/)           | [Seeed/SenseCap](https://github.com/jancee/HIP/blob/pre/0019-third-party-manufacturers/seeed.md)        | 2021-06-15    | [14NBXJE5kAAZTMigY4dcjXSMG4CSqjYwvteQWwQsYhsu2TKN6AF](https://explorer.helium.com/accounts/14NBXJE5kAAZTMigY4dcjXSMG4CSqjYwvteQWwQsYhsu2TKN6AF) |
-| [ClodPi](https://clodpi.io/)           | [ClodPi](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/clodpi.md)        | 2021-07-30    | [13XuP2DjHEHVkKguDDZD2ev5AeqMLuJ8UQ44efEcDmVTnBcvc6F](https://explorer.helium.com/accounts/13XuP2DjHEHVkKguDDZD2ev5AeqMLuJ8UQ44efEcDmVTnBcvc6F) |
-| [E-sun Electronics/ Panther](https://panther.global/)           | [PantherX](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/pantherx.md)        | 2021-09-24    | [13v9iGhjvQUtVaZXcFFRCEbL1nPR4R8QJowBgMUcaGM2v1aV6mn](https://explorer.helium.com/accounts/13v9iGhjvQUtVaZXcFFRCEbL1nPR4R8QJowBgMUcaGM2v1aV6mn) |
+| [ClodPi](https://clodpi.io/)                            | [ClodPi](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/clodpi.md)       | 2021-07-30    | [13XuP2DjHEHVkKguDDZD2ev5AeqMLuJ8UQ44efEcDmVTnBcvc6F](https://explorer.helium.com/accounts/13XuP2DjHEHVkKguDDZD2ev5AeqMLuJ8UQ44efEcDmVTnBcvc6F) |
+| [E-sun Electronics/ Panther](https://panther.global/)   | [PantherX](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/pantherx.md)   | 2021-09-24    | [13v9iGhjvQUtVaZXcFFRCEbL1nPR4R8QJowBgMUcaGM2v1aV6mn](https://explorer.helium.com/accounts/13v9iGhjvQUtVaZXcFFRCEbL1nPR4R8QJowBgMUcaGM2v1aV6mn) |
 
 ## Becoming a Maker
 
