--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -9,52 +9,54 @@ slug: /mine-hnt/data-only-hotspots
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-
 Data Only Hotspots are eligible for **Network Data Transfer Rewards** but not
 **Proof of Coverage Rewards**.
 
 Since Data Only Hotspots do not earn Proof-of-Coverage rewards, they may be
-permissionlessly added to the blockchain. Once added to the blockchain and
-with location asserted, they will earn $HNT when forwarding network data.
+permissionlessly added to the blockchain. Once added to the blockchain and with
+location asserted, they will earn $HNT when forwarding network data.
 
-| Rewards Type                 | Data Only Hotspots | Full & Light Hotspots |
-| :--------------------------- | :----------------- |:------------- |
-| Network Data Forwarding      | YES                | YES           |
-| Proof of Coverage            | NO                 | YES           |
+| Rewards Type            | Data Only Hotspots | Full & Light Hotspots |
+| :---------------------- | :----------------- | :-------------------- |
+| Network Data Forwarding | YES                | YES                   |
+| Proof of Coverage       | NO                 | YES                   |
 
 # Setup a Data Only Hotspot
 
 ## Transactions & Cost
 
 Every Hotspot on the blockchain goes through two transactions:
-* **add hotspot**: links the Hotspot's key (`swarm_key`) of a Hotspot to a
-user's wallet
-* **assert location**: provides GPS location, elevation (in meters), and dBi antenna
-output for the Hotspot
+
+- **add hotspot**: links the Hotspot's key (`swarm_key`) of a Hotspot to a
+  user's wallet
+- **assert location**: provides GPS location, elevation (in meters), and dBi
+  antenna output for the Hotspot
 
 The fee schedule is as follows:
-* **add data only hotspot**: 1000000 DC ($10)
-* **assert location**: 500000 DC ($5)
 
-:::info
-Data Credits in your Helium Console organization cannot be used to pay blockchain onboarding and assert location fees for Hotspots. To onboard a Hotspot, you'll need to burn HNT for Data Credits to the wallet that owns the Hotspot.
-:::
+- **add data only hotspot**: 1000000 DC ($10)
+- **assert location**: 500000 DC ($5)
+
+:::info Data Credits in your Helium Console organization cannot be used to pay
+blockchain onboarding and assert location fees for Hotspots. To onboard a
+Hotspot, you'll need to burn HNT for Data Credits to the wallet that owns the
+Hotspot. :::
 
 ## Pre-requisites
 
 You should [setup a packet forwarder](/use-the-network/setup-a-packet-forwarder)
 with the [light hotspot client](/mine-hnt/light-hotspots).
 
-In addition, you should setup a [CLI wallet](/wallets/cli-wallet) as this
-is currently the only wallet that supports Data Only Hotspots.
+In addition, you should setup a [CLI wallet](/wallets/cli-wallet) as this is
+currently the only wallet that supports Data Only Hotspots.
 
-**Note**: you can import a mobile wallet to the CLI.
-**Another note**: you should __not__ install the CLI on your gateway
+**Note**: you can import a mobile wallet to the CLI. **Another note**: you
+should **not** install the CLI on your gateway
 
 ## Add Hotspot
 
-From a terminal on the device where the Light Hotspot client is installed,
-you need to generate the `add hotspot` transaction.
+From a terminal on the device where the Light Hotspot client is installed, you
+need to generate the `add hotspot` transaction.
 
 ```
 ./helium_gateway add --owner WALLET_ADDRESS --payer WALLET_ADDRESS --mode dataonly
@@ -81,50 +83,49 @@ The `txn` field needs to be used as the input to the wallet command
 helium-wallet hotspots add CrkBCiEBrlImpYLbJ0z0hw5b4g9isRyPrgbXs9X+RrJ4pJJc9MkSIQA7yIy7F+9oPYCTmDz+v782GMJ4AC+jM+VfjvUgAHflWSJGMEQCIGfugfLkXv23vJcfwPYjLlMyzYhKp+Rg8B2YKwnsDHaUAiASkdxUO4fdS33D7vyid8Tulizo9SLEL1lduyvda9YVRCohAa5SJqWC2ydM9IcOW+IPYrEcj64G17PV/kayeKSSXPTJOMCEPUDo+wM=
 ```
 
-After you verify the transaction, append the command with `--commit`
-to submit it to the API. Note that you need sufficient funds to cover
-both the transaction cost (65000 DC) and the `staking_fee` (1000000 DC).
-Thanks to the ["implicit burn" mechanism](/blockchain/transaction-fees/#transaction-fees-and-implicit-burn),
-available HNT will be used to cover the transaction if you have
-insufficient DCs.
+After you verify the transaction, append the command with `--commit` to submit
+it to the API. Note that you need sufficient funds to cover both the transaction
+cost (65000 DC) and the `staking_fee` (1000000 DC). Thanks to the
+["implicit burn" mechanism](/blockchain/transaction-fees/#transaction-fees-and-implicit-burn),
+available HNT will be used to cover the transaction if you have insufficient
+DCs.
 
-You can track the transaction progress by using the
-transaction hash at the following endpoint: `https://api.helium.io/v1/pending_transactions/TXN_HASH`
+You can track the transaction progress by using the transaction hash at the
+following endpoint: `https://api.helium.io/v1/pending_transactions/TXN_HASH`
 
-Once the transaction clears, you're done linking the Hotspot with your
-wallet.
+Once the transaction clears, you're done linking the Hotspot with your wallet.
 
-:::warning
-At this point, you will want to be certain that you've backed up the
+:::warning At this point, you will want to be certain that you've backed up the
 data only hotspot's keypair. Its location can be customized in the client's
 `settings.toml`, but by default, it's located at
-`/etc/helium_gateway/gateway_key.bin`
-:::
+`/etc/helium_gateway/gateway_key.bin` :::
 
 ## Assert Hotspot
 
 To assert the Hotspot use `helium-wallet hotspots assert`
+
 ```
 helium-wallet hotspots assert --gateway DATA_ONLY_HOTSPOT_PUBKEY --lat=37.7806295 --lon=-122.4008481 --mode dataonly
 ```
 
-The `DATA_ONLY_HOTSPOT_PUBKEY` in the example from the previous section
-would be `11TL62V8NYvSTXmV5CZCjaucskvNR1Fdar1Pg4Hzmzk5tk2JBac`.
+The `DATA_ONLY_HOTSPOT_PUBKEY` in the example from the previous section would be
+`11TL62V8NYvSTXmV5CZCjaucskvNR1Fdar1Pg4Hzmzk5tk2JBac`.
 
-`--elevation` and `--gain` can be also set. Use `helium-wallet hotspots assert --help` for more info.
+`--elevation` and `--gain` can be also set. Use
+`helium-wallet hotspots assert --help` for more info.
 
-After you verify the transaction, append the command with `--commit`
-to submit it to the API. Note that you need sufficient funds to cover
-both the transaction cost (65000 DC) and the `staking_fee` (500000 DC).
-Thanks to the ["implicit burn" mechanism](/blockchain/transaction-fees/#transaction-fees-and-implicit-burn),
-available HNT will be used to cover the transaction if you have
-insufficient DCs.
+After you verify the transaction, append the command with `--commit` to submit
+it to the API. Note that you need sufficient funds to cover both the transaction
+cost (65000 DC) and the `staking_fee` (500000 DC). Thanks to the
+["implicit burn" mechanism](/blockchain/transaction-fees/#transaction-fees-and-implicit-burn),
+available HNT will be used to cover the transaction if you have insufficient
+DCs.
 
-You can track the transaction progress by using the
-transaction hash at the following endpoint: `https://api.helium.io/v1/pending_transactions/TXN_HASH`
+You can track the transaction progress by using the transaction hash at the
+following endpoint: `https://api.helium.io/v1/pending_transactions/TXN_HASH`
 
-Once the transaction clears, your Data Only Hotspot is ready to start
-earning for data transfered!
+Once the transaction clears, your Data Only Hotspot is ready to start earning
+for data transfered!
 
 ## Data-Only Hotspot Setup Guides
 
@@ -136,9 +137,11 @@ earning for data transfered!
 - [RAK Concentrator (RAK2245/RAK2247/RAK2287) + Raspberry Pi 2, 3, or 4](/mine-hnt/data-only-guides/rak-concentrators)
   - This setup will only mine HNT as a Data Only Hotspot.
 - [Balena Data Only Hotspot running Raspberry Pi 0, 2, 3 or 4 with RAK Concentrator (RAK2287)](/mine-hnt/data-only-guides/balena-data-only-hotspot)
-  - This setup based on Nebra will only mine HNT as a Data Only Hotspot, when possible.
+  - This setup based on Nebra will only mine HNT as a Data Only Hotspot, when
+    possible.
 - [Dragino PG1301 + Raspberry Pi 4](/mine-hnt/data-only-guides/dragino-pg1301)
-  - This setup based on the Dragino PG1301 Concentrator will only mine HNT as a Data Only Hotspot.
+  - This setup based on the Dragino PG1301 Concentrator will only mine HNT as a
+    Data Only Hotspot.
 
 :::info
 
