--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -6,92 +6,166 @@ slug: /mine-hnt
 hide_table_of_contents: true
 ---
 
-
-
-
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-<div class="container" style={{padding: 0, marginBottom: 60}}>
-	<div class="row">
-        <div class="col col--12">
-            <div class="flex">
-                 <img className="headericon" src={useBaseUrl("img/mine-hnt/minehnticon.png")} />
-                <div className="headertext">
-                    <h1 style={{marginTop:0}}>Mine HNT</h1>
-                    <h2 className="subtitle">Helium Hotspots mine $HNT and were originally built by Helium, Inc. but are now built by our growing ecosystem of approved manufacturers.</h2>
-                    <div>
-                        <a href="/mine-hnt/full-hotspots"><span class="badge badge--secondary">Approved Makers</span></a>
-                        <a href="/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing"><span class="badge badge--secondary">Maker Approval</span></a>
-                        <a href="/mine-hnt/maker-apps"><span class="badge badge--secondary">Maker Apps</span></a>
-                        <a href="/mine-hnt/understanding-hotspot-status"><span class="badge badge--secondary">Understanding Hotspot Status</span></a>
-                        <a href="/mine-hnt/validators"><span class="badge badge--secondary">Run a Validator</span></a>	
-                    </div>
-                </div>
-            </div>
-        </div>
-	</div>
-</div>
-
-
-<div class="container" style={{padding: 0}}>
+<div class="container" style={{ padding: 0, marginBottom: 60 }}>
   <div class="row">
-  	<div class="col col--12">
-  		<h2>Hotspots</h2>
-  	</div>
-    <div class="col col--6">
-    	<p>Want to help build the largest IoT network in the world? Want to provide coverage to IoT devices and earn HNT while you do?</p>
-    	<p style={{marginBottom:40}}>Check out some of these quick links for help getting started or join us in the #gateway-development channel on <a href="https://discord.gg/helium">our Discord</a>.</p>
+    <div class="col col--12">
+      <div class="flex">
+        <img
+          className="headericon"
+          src={useBaseUrl("img/mine-hnt/minehnticon.png")}
+        />
+        <div className="headertext">
+          <h1 style={{ marginTop: 0 }}>Mine HNT</h1>
+          <h2 className="subtitle">
+            Helium Hotspots mine $HNT and were originally built by Helium, Inc.
+            but are now built by our growing ecosystem of approved
+            manufacturers.
+          </h2>
+          <div>
+            <a href="/mine-hnt/full-hotspots">
+              <span class="badge badge--secondary">Approved Makers</span>
+            </a>
+            <a href="/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing">
+              <span class="badge badge--secondary">Maker Approval</span>
+            </a>
+            <a href="/mine-hnt/maker-apps">
+              <span class="badge badge--secondary">Maker Apps</span>
+            </a>
+            <a href="/mine-hnt/understanding-hotspot-status">
+              <span class="badge badge--secondary">
+                Understanding Hotspot Status
+              </span>
+            </a>
+            <a href="/mine-hnt/validators">
+              <span class="badge badge--secondary">Run a Validator</span>
+            </a>
+          </div>
+        </div>
+      </div>
     </div>
-      <div class="col col--5 col--offset-1 "  style={{marginBottom: 100}}>
-		    <h5 style={{marginTop:0}}>Quick Links</h5>
-		    <a className="block" href="/mine-hnt/full-hotspots"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Approved Makers</a>
-		    <a className="block" href="/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Maker Approval and Auditing</a>
-		    <a className="block" href="/mine-hnt/data-only-hotspots"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Data Only Hotspots</a>
-	    </div>
   </div>
-    <div class="row">
-    <div class="col col--6 borderTop">
-    <div>
-        <h3>Full Hotspots</h3>
-        	<p style={{marginBottom:40}}>These Hotspots maintain a full copy of the HNT blockchain, Participate in Proof of Coverage rewards, and get rewarded for forwarding Data Packets. Details <a href="https://docs.helium.com/mine-hnt/full-hotspots">can be found here</a>.</p>
-        </div>
-    </div>
-     <div class="col col--6 borderTop" >
-     <div>
-        <h3>Light Hotspots</h3>
-        	<p style={{marginBottom:40}}>These Hotspots use Validators to get information about the HNT blockchain, Participate in Proof of Coverage rewards, and get rewarded for forwarding Data Packets. Details <a href="https://docs.helium.com/mine-hnt/light-hotspots">can be found here</a>.</p>
-        </div>
-    </div>
-	<div class="col col--6 borderTop" >
-     <div>
-        <h3>Data Only Hotspots</h3>
-        	<p style={{marginBottom:40}}>These Hotspots use Validators to get information about the HNT blockchain, and get rewarded for forwarding Data Packets. Details <a href="https://docs.helium.com/mine-hnt/data-only-hotspots">can be found here</a>.</p>
-        </div>
-    </div>
-    	<div class="col col--6 borderTop" >
-     <div>
-        <h3>Maker Apps</h3>
-        	<p style={{marginBottom:40}}>Makers have their own App to perform Hotspot onboarding, diagnostics, and troubleshooting. <a href="/mine-hnt/maker-apps">Read more here</a>.</p>
-        </div>
-    </div>
-    </div>
 </div>
 
-<div class="container" style={{padding: 0, marginBottom: 60}}>
-	<div class="row">
-        <div class="col col--12">
-            <div class="flex">
-                 <img className="headericon" src={useBaseUrl("img/validators/runvalidator.png")} />
-                <div className="headertext">
-                    <h1 style={{marginTop:0}}>Validators</h1>
-                    <h2 className="subtitle">Validators confirm blocks transactions are valid and properly placed on the chain. They also serve block chain data to Light and Data Only Hotspots.</h2>
-                    <div>
-                        <a href="/mine-hnt/validators/mainnet/deployment-guide"><span class="badge badge--secondary">Deployment Guide</span></a>
-                        <a href="/mine-hnt/validators/requirements/"><span class="badge badge--secondary">Requirements</span></a>
-                        <a href="/mine-hnt/validators/penalties"><span class="badge badge--secondary">Penalties</span></a>	
-                    </div>
-                </div>
-            </div>
+<div class="container" style={{ padding: 0 }}>
+  <div class="row">
+    <div class="col col--12">
+      <h2>Hotspots</h2>
+    </div>
+    <div class="col col--6">
+      <p>
+        Want to help build the largest IoT network in the world? Want to provide
+        coverage to IoT devices and earn HNT while you do?
+      </p>
+      <p style={{ marginBottom: 40 }}>
+        Check out some of these quick links for help getting started or join us
+        in the #gateway-development channel on{" "}
+        <a href="https://discord.gg/helium">our Discord</a>.
+      </p>
+    </div>
+    <div class="col col--5 col--offset-1 " style={{ marginBottom: 100 }}>
+      <h5 style={{ marginTop: 0 }}>Quick Links</h5>
+      <a className="block" href="/mine-hnt/full-hotspots">
+        <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
+        Approved Makers
+      </a>
+      <a
+        className="block"
+        href="/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing"
+      >
+        <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
+        Maker Approval and Auditing
+      </a>
+      <a className="block" href="/mine-hnt/data-only-hotspots">
+        <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
+        Data Only Hotspots
+      </a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col col--6 borderTop">
+      <div>
+        <h3>Full Hotspots</h3>
+        <p style={{ marginBottom: 40 }}>
+          These Hotspots maintain a full copy of the HNT blockchain, Participate
+          in Proof of Coverage rewards, and get rewarded for forwarding Data
+          Packets. Details{" "}
+          <a href="https://docs.helium.com/mine-hnt/full-hotspots">
+            can be found here
+          </a>
+          .
+        </p>
+      </div>
+    </div>
+    <div class="col col--6 borderTop">
+      <div>
+        <h3>Light Hotspots</h3>
+        <p style={{ marginBottom: 40 }}>
+          These Hotspots use Validators to get information about the HNT
+          blockchain, Participate in Proof of Coverage rewards, and get rewarded
+          for forwarding Data Packets. Details{" "}
+          <a href="https://docs.helium.com/mine-hnt/light-hotspots">
+            can be found here
+          </a>
+          .
+        </p>
+      </div>
+    </div>
+    <div class="col col--6 borderTop">
+      <div>
+        <h3>Data Only Hotspots</h3>
+        <p style={{ marginBottom: 40 }}>
+          These Hotspots use Validators to get information about the HNT
+          blockchain, and get rewarded for forwarding Data Packets. Details{" "}
+          <a href="https://docs.helium.com/mine-hnt/data-only-hotspots">
+            can be found here
+          </a>
+          .
+        </p>
+      </div>
+    </div>
+    <div class="col col--6 borderTop">
+      <div>
+        <h3>Maker Apps</h3>
+        <p style={{ marginBottom: 40 }}>
+          Makers have their own App to perform Hotspot onboarding, diagnostics,
+          and troubleshooting. <a href="/mine-hnt/maker-apps">Read more here</a>
+          .
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container" style={{ padding: 0, marginBottom: 60 }}>
+  <div class="row">
+    <div class="col col--12">
+      <div class="flex">
+        <img
+          className="headericon"
+          src={useBaseUrl("img/validators/runvalidator.png")}
+        />
+        <div className="headertext">
+          <h1 style={{ marginTop: 0 }}>Validators</h1>
+          <h2 className="subtitle">
+            Validators confirm blocks transactions are valid and properly placed
+            on the chain. They also serve block chain data to Light and Data
+            Only Hotspots.
+          </h2>
+          <div>
+            <a href="/mine-hnt/validators/mainnet/deployment-guide">
+              <span class="badge badge--secondary">Deployment Guide</span>
+            </a>
+            <a href="/mine-hnt/validators/requirements/">
+              <span class="badge badge--secondary">Requirements</span>
+            </a>
+            <a href="/mine-hnt/validators/penalties">
+              <span class="badge badge--secondary">Penalties</span>
+            </a>
+          </div>
         </div>
-	</div>
+      </div>
+    </div>
+  </div>
 </div>
