--- a/docs/open-source/docs/installation.mdx
+++ b/docs/open-source/docs/installation.mdx
@@ -9,21 +9,25 @@ slug: /open-source/docs/installation
 
 ## Node.js
 
-Download latest software:
-External link: [Node.js](https://nodejs.org/en/download) version >= 10.15.1
+Download latest software: External link:
+[Node.js](https://nodejs.org/en/download) version >= 10.15.1
 
 :::info
-Windows Node.js installation you do not need to install the Compiler and Chocolaty dependencies.
+
+Windows Node.js installation you do not need to install the Compiler and
+Chocolaty dependencies.
+
 :::
 
 Install Node.js
 
 ## Yarn
 
-Download software:
-External link: [Yarn](https://yarnpkg.com/getting-started/install) version >= 1.5
+Download software: External link:
+[Yarn](https://yarnpkg.com/getting-started/install) version >= 1.5
 
-After you install Node.js, which will install Node.js and npm as a dependency you can do the following. 
+After you install Node.js, which will install Node.js and npm as a dependency
+you can do the following.
 
 ```
 $ npm install -g yarn
@@ -31,7 +35,9 @@ $ npm install -g yarn
 > yarn@1.22.11 preinstall /path/to/npm/node_modules/yarn
 > :; (node ./preinstall.js > /dev/null 2>&1 || true)
 ```
-To upgrade the Yarn version to be >= 1.5 you must set each project directory to version berry.
+
+To upgrade the Yarn version to be >= 1.5 you must set each project directory to
+version berry.
 
 ```
 $ cd ~/path/to/project
@@ -44,12 +50,13 @@ Updating /path/to/prjoect/docs/.yarnrc.yml...
 Done!
 ```
 
-Then you can install Yarn which will download and compile all the project module dependencies. 
+Then you can install Yarn which will download and compile all the project module
+dependencies.
 
 ```
 $ yarn install
 
- YN0070: Migrating from Yarn 1; automatically enabling the compatibility node-modules linker 
+ YN0070: Migrating from Yarn 1; automatically enabling the compatibility node-modules linker
  ...
  YN0007: │ yarn@npm:1.22.10 must be built because it never has been before or the last one failed
  YN0007: │ core-js@npm:3.12.1 must be built because it never has been before or the last one failed
@@ -85,7 +92,8 @@ i ｢wds｣: 404s will fallback to /index.html
  WebpackDevMiddleware
 ```
 
-This command starts a local development server and open up a browser window. Most changes are reflected live without having to restart the server.
+This command starts a local development server and open up a browser window.
+Most changes are reflected live without having to restart the server.
 
 ### Link Checking before your PR
 
@@ -113,5 +121,5 @@ Use `npm run serve` to test your build locally.
 
 ### Developing
 
-Each time you save files under your local repo the site will get rebuilt and the pages refreshed on the fly, there is no need to keep restarting Yarn.
-
+Each time you save files under your local repo the site will get rebuilt and the
+pages refreshed on the fly, there is no need to keep restarting Yarn.
