--- a/docs/open-source/open-source.mdx
+++ b/docs/open-source/open-source.mdx
@@ -5,11 +5,12 @@ sidebar_label: Overview
 slug: /open-source
 ---
 
-
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-<img className="docsheader" src={useBaseUrl("img/open-source/opensource.png")} />
-
+<img
+  className="docsheader"
+  src={useBaseUrl("img/open-source/opensource.png")}
+/>
 
 # Helium is Open Source
 
@@ -43,20 +44,16 @@ things here are written in Erlang.
 
 - [Erlang libp2p](https://github.com/helium/erlang-libp2p) - Libp2p swarms
   written in (you guessed it) Erlang.
-  
 - [Helium CLI Wallet](https://github.com/helium/helium-wallet-rs) - Command Line
   Interface, written in Rust, used to created and administer Helium wallets, and
-  interact with the Helium Network.  
-  
+  interact with the Helium Network.
 - [Helium JS](https://github.com/helium/helium-js) - Typescript SDKs for
   interacting with the Helium blockchain.
-   
--  [Packet Purchaser](https://github.com/helium/packet-purchaser) - Service that buys 
-   Helium LoRaWAN packets from the Network and delivers the them to a target LoRaWAN Network server.
-   
+- [Packet Purchaser](https://github.com/helium/packet-purchaser) - Service that
+  buys Helium LoRaWAN packets from the Network and delivers the them to a target
+  LoRaWAN Network server.
 - [Angry Purple Tiger](https://github.com/helium/angry-purple-tiger) - Ever
   wonder how your Miner got its cute little animal name? Here it is.
-
 
 ### LoRaWAN
 
@@ -65,11 +62,12 @@ some of the code that makes it possible.
 
 - [Packet Forwarder](https://github.com/helium/packet_forwarder) - Helium's fork
   of the Lora packet forwarder.
-  
-- [Light Gateway](https://github.com/helium/gateway-rs) - The next-generation packet 
-  forwarder for the Helium-enabled gateways.
+- [Light Gateway](https://github.com/helium/gateway-rs) - The next-generation
+  packet forwarder for the Helium-enabled gateways.
 
-- [Helium Console](https://github.com/helium/console) - A web browser front-end for users to manage organizations and devices and a Helium Blockchain-compatible LoRaWAN Network Server (LNS).
+- [Helium Console](https://github.com/helium/console) - A web browser front-end
+  for users to manage organizations and devices and a Helium
+  Blockchain-compatible LoRaWAN Network Server (LNS).
 
 - [Console Decoders](https://github.com/helium/console-decoders) - A collection
   of LoRaWAN sensor decoders used in Helium Console.
@@ -84,9 +82,9 @@ some of the code that makes it possible.
 
 - [Helium Docs](https://github.com/helium/docs) - Docusaurus-based docs for all
   things Helium. (You're reading them.)
-  
-   - [Installation](/open-source/docs/installation) - How to install the needed components 
-   to start helping docs development.
 
-- [Helium Mappers](https://github.com/helium/mappers/) - Community generated 
+  - [Installation](/open-source/docs/installation) - How to install the needed
+    components to start helping docs development.
+
+- [Helium Mappers](https://github.com/helium/mappers/) - Community generated
   coverage map of the Helium network using real-world testing.
